# wgpu-fundamentals

./: README.md  book.toml
.github/workflows/: deploy.yml
examples/: build.sh
examples/wgpu-triangle/: .gitignore  Cargo.toml
examples/wgpu-triangle/src/: lib.rs  shader.wgsl
src/: SUMMARY.md  chapter_1.md  wgpu-test.md
