[package]
name = "wgpu-triangle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies.wgpu]
version = "25.0.2"
features = ["webgl"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "CanvasRenderingContext2d",
  "ImageData",

  "ResizeObserver",
  "ResizeObserverEntry",
  "ResizeObserverSize",
]
